constit/static/style/style.css
/* ... */
@media (min-width: 968px) {

    .flex-news {
        flex-direction: row;
    }

    .first-page.news h2 {
        font-size: 16px !important;
    }

    .first-page.news ul,
    .first-page.news ol,
    .first-page.news p {
        font-size: 16px !important;
    }

    .show-studies {
        position: sticky;
        top: 0;
        width: 400px;
        margin-top: 12px;
        padding-right: 20px;
    }

    .show-studies h3 {
        font-size: 22px;
    }

    .show-studies a .study-info .image-card {
        width: 179px;
        height: 100px;
    }

    .studies-text-info {
        width: 420px;
        margin-right: 10px;
        margin-left: 10px;
    }

    .show-studies a .study-info h3 {
        margin-bottom: 10px;
        font-size: 16px;
        color: var(--second-color);
    }

    .show-studies a .study-info p {
        font-size: 14px;
        margin-top: 6px;
        max-height: 71px;
    }

    .show-studies a .study-info {
        margin-bottom: 10px;
        padding-bottom: 0;
    }

    .top-of-study {
        padding: 10px 8px;
        font-size: 15px;
        margin-bottom: 15px;
    }
}

@media (min-width: 992px) {
    .first-page.news {
        width: calc(100% - 36px);
        margin: 10px 0 10px 18px;
        padding: 16px;
        box-sizing: border-box;
    }

    .first-page.news h2 {
        font-size: 17px !important;
    }

    .first-page.news ul,
    .first-page.news ol,
    .first-page.news p {
        font-size: 18px !important;
    }

    .top-of-study {
        padding: 10px 15px;
        font-size: 17px;
        margin-bottom: 20px;
    }
}

.show-studies-h3 {
    background-color: var(--fourth-color);
    color: white;
    padding: 5px;
    font-family: 'CodecProBold';
}

/* end first page */

.download,
.view {
    position: relative;
}

.download img {
    width: 100px;
    height: 100px;
}

.error {
    background-color: red;
    padding: 10px;
    font-family: 'Calibri';
    color: white;
    width: 60%;
    margin: 30px auto;
    border-radius: 20px;
    text-align: center;
}

.PDF {
    width: 95%;
    height: 1000px;
}

@media (max-width: 574px) {
    .spe-h1 {
        font-size: 18px;
        margin-top: 20px;
        margin-bottom: 0;
    }

    .show-studies-h3 {
        padding: 10px 5px 5px;
    }
}

@media (min-width: 575px) {
    .spe-h1 {
        font-size: 18px;
        margin-top: 20px;
        margin-bottom: 0;
    }
}

@media (min-width: 768px) {
    .spe-h1 {
        font-size: 20px;
        margin-top: 15px;
        margin-bottom: 0;
    }
}

@media (min-width: 992px) {
    .spe-h1 {
        font-size: 22px;
        margin-top: 40px;
        margin-bottom: 0;
    }
}

.container-sec {
    display: flex;
    gap: 12px;
    max-width: 70%;
    margin: 20px auto;
    background-color: var(--second-color);
    border-radius: 12px;
    padding: 20px 10px;
    scroll-snap-type: x mandatory;
    overflow-x: scroll;
    scroll-padding: 30px;
    box-shadow: 0 15px 15px rgba(0, 0, 0, 0.1);
    direction: rtl;
}

.container-sec .card {
    display: flex;
    flex: 0 0 100%;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #FFF;
    border-radius: 12px;
    padding: 20px;
    scroll-snap-align: start;
    box-shadow: 0 15px 15px rgba(0, 0, 0, 0.1);
    margin-top: 4px;
    font-size: 18px;
    font-weight: 400;
    color: #333;
    text-align: center;
    font-family: 'Calibri';
    max-width: 60%;
}

.card .image {
    width: 500px;
    height: 200px;
    margin: auto;
    padding: 10px;
    margin-bottom: 10px;
    position: relative;
    right: 40px;
}

.card .image img {
    display: block !important;
    margin: 10px 0 !important;
    height: 100%;
    width: 100%;
    border: 5px solid #fff;
    border-radius: 12px;
}

.container-sec .card a {
    text-decoration: none;
    font-size: 25px;
    color: black;
}

.container-sec .card a p {
    height: 20px;
}

@media (max-width: 574px) {
    .container-sec .card a {
        font-size: 18px;
    }
}

@media (max-width: 574px) {
    .card .image {
        width: 165px;
        right: -6px;
        height: 170px;
    }

    .container-sec .card a p {
        height: 25px;
    }
}

@media (min-width: 575px) {
    .card .image {
        width: 238px;
        right: -6px;
        height: 170px;
    }

}

@media (min-width: 768px) {
    .card .image {
        width: 346px;
        right: -5px;
        height: 190px;
    }
}

@media (min-width: 992px) {
    .card .image {
        width: 446px;
        right: -3px;
        height: 300px;
    }

}

/* start styling special icons and links */
.fa-calendar {
    padding-right: 20px;
}

.show-all {
    text-decoration: none;
    text-align: center;
    background-color: var(--fourth-color);
    color: white;
    margin-bottom: 0 !important;
    padding: 8px 5px;
    margin: 0;
    color: white !important;
    font-family: 'CodecProBold';
    font-size: 25px;
    transition: 0.3s;
    display: block;
    width: 250px !important;
}

.show-all:hover {
    background-color: var(--fourth-color) !important;
}

::selection {
    background-color: var(--second-color);
    color: #ffffff;
}

.first-page .full-text img {
    width: 400px;
    height: 250px;
    display: block;
    margin: 5px auto;
}

.full-text .spe-img {
    width: 300px;
    height: 300px;
    display: block !important;
    margin: 10px 0 !important;
}

@media (max-width: 574px) {
    .first-page .full-text img {
        width: 200px;
        height: auto;
    }
}

@media (min-width: 575px) {
    .first-page .full-text img {
        width: 230px;
        height: auto;
    }
}

@media (min-width: 768px) {
    .first-page .full-text img {
        width: 300px;
        height: auto;
    }
}

@media (min-width: 992px) {
    .first-page .full-text img {
        width: 350px;
        height: auto;
    }
}
/* ... */

